--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
     <title>GIGEO App!</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -46,7 +48,7 @@
          c0.42,0,0.77-0.12,1.03-0.34c0.26-0.23,0.4-0.52,0.4-0.87c0-0.77-0.47-1.15-1.41-1.15h-1.03V6.3z"/>
        <path class="st1" d="M138.7,3.89h-2.12v6.24h-0.8V3.89h-2.13V3.24h5.05V3.89z"/>
      </g>
-     </svg>
+                </svg>
             </div>
             <div class="contenedor__nav__lista">
                 <ul>
@@ -73,54 +75,58 @@
                 <button class="profile__buttons__mensaje">Mensaje</button>
                 <button class="profile__buttons__seguir">Seguir</button>
             </div>
+
         </section>
+        <div class="">
+            <hr>
+        </div>
 
         <main class="contenedor__main container">
             <h3>Videos Populares</h3>
             <div class="row">
-                <div class="contenedor__main-item col-3">
+                <div class="contenedor__main-item col-sm-12 col-md-3">
                     <img src="assets/img/image-1.png" alt="video1">
                     <h4>Despues de la vela</h4>
                     <p>164k visitas - 1 semana atras</p>
                 </div>
 
-                <div class="contenedor__main-item col-3">
+                <div class="contenedor__main-item col-sm-12 col-md-3">
                     <img src="assets/img/image-1.png" alt="video1">
                     <h4>Despues de la vela</h4>
                     <p>164k visitas - 1 semana atras</p>
                 </div>
 
-                <div class="contenedor__main-item col-3">
+                <div class="contenedor__main-item col-sm-12 col-md-3">
                     <img src="assets/img/image-1.png" alt="video1">
                     <h4>Despues de la vela</h4>
                     <p>164k visitas - 1 semana atras</p>
                 </div>
 
-                <div class="contenedor__main-item col-3">
+                <div class="contenedor__main-item col-sm-12 col-md-3">
                     <img src="assets/img/image-1.png" alt="video1">
                     <h4>Despues de la vela</h4>
                     <p>164k visitas - 1 semana atras</p>
                 </div>
 
-                <div class="contenedor__main-item col-3">
+                <div class="contenedor__main-item col-sm-12 col-md-3">
                     <img src="assets/img/image-1.png" alt="video1">
                     <h4>Despues de la vela</h4>
                     <p>164k visitas - 1 semana atras</p>
                 </div>
 
-                <div class="contenedor__main-item col-3">
+                <div class="contenedor__main-item col-sm-12 col-md-3">
                     <img src="assets/img/image-1.png" alt="video1">
                     <h4>Despues de la vela</h4>
                     <p>164k visitas - 1 semana atras</p>
                 </div>
 
-                <div class="contenedor__main-item col-3">
+                <div class="contenedor__main-item col-sm-12 col-md-3">
                     <img src="assets/img/image-1.png" alt="video1">
                     <h4>Despues de la vela</h4>
                     <p>164k visitas - 1 semana atras</p>
                 </div>
 
-                <div class="contenedor__main-item col-3">
+                <div class="contenedor__main-item col-sm-12 col-md-3">
                     <img src="assets/img/image-1.png" alt="video1">
                     <h4>Despues de la vela</h4>
                     <p>164k visitas - 1 semana atras</p>
